Fix width of user input boxes on small screen

--- a/frontend/src/assets/stylesheets/datepicker/datepicker.css
+++ b/frontend/src/assets/stylesheets/datepicker/datepicker.css
@@ -321,4 +321,8 @@
     display: flex;
     flex-direction: column;
   }
+
+  .datepicker.user-input-wrapper {
+    width: 100%;
+  }
 }
